[tool.poetry]
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "A scaffold to speed up launching a flask project"
name = "flask-scaffold"
package-mode = false
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"

# flask
APIFlask = "^2.2.1"
flask = "^3.1.0"
flask-migrate = "^4.0.7"
flask-sqlalchemy = "^3.1.1"

# server
aiohttp = "^3.11.2"
aiohttp_wsgi = "^0.10.0"
gunicorn = "^23.0.0"

# db
hiredis = "^3.0.0"
psycopg2-binary = "^2.9.10"
redis = "^5.2.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
mypy = "^1.13.0"
ruff = "^0.7.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
