[tool.poetry]
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "A scaffold to speed up launching a flask project"
name = "flask-scaffold"
package-mode = false
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"

# flask
APIFlask = "^3.0.2"
flask = "^3.1.1"
flask-migrate = "^4.0.7"
flask-sqlalchemy = "^3.1.1"

# server
gunicorn = "^23.0.0"
httptools = "^0.7.1"
uvicorn = "^0.38.0"
uvloop = {version = "0.22.1", markers = 'sys_platform != "win32"'}
asgiref = "^3.11.0"

# db
hiredis = "^3.0.0"
psycopg2-binary = "^2.9.10"
redis = "^7.1.0"

[tool.poetry.group.dev.dependencies]
ipython = "^9.7.0"
mypy = "^1.19.1"
ruff = "^0.14.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
